--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,16 @@
     <link rel="preconnect" href="%REACT_APP_NODE_3%" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Meta -->
-    <title>App</title>
-    <meta name="description" content="Fast growing Defi on BSC and Shiden! Fractionalize and farm NFTs." />
+    <title>Avault Finance - First Native Yield Aggregator on Astar</title>
+    <meta name="description" content="Providing best stragtegies, highest APY on Astar Network!!!" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
-    <meta name="theme-color" content="#121b1f" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
-    <meta name="twitter:description" content="Fast growing Defi on BSC and Shiden! Fractionalize and farm NFTs." />
+    <meta name="theme-color" content="#030222" />
+    <meta name="twitter:title" content="Avault Finance - First Native Yield Aggregator on Astar" />
+    <meta name="twitter:description" content="Providing best stragtegies, highest APY on Astar Network!!!" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Avault Finance - fractionalize and farm NFTs" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
   </head>
   <body>
     <!-- GTAG (noscript) -->
