--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <meta name="twitter:description" content="Providing best stragtegies, highest APY on Astar Network!!!" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
+    <link rel="stylesheet" href="/animate.min.css" />
   </head>
   <body>
     <!-- GTAG (noscript) -->
