--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="%REACT_APP_NODE_1%" />
     <link rel="preconnect" href="%REACT_APP_NODE_2%" />
     <link rel="preconnect" href="%REACT_APP_NODE_3%" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon_beta.svg" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Meta -->
