--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Meta -->
-    <title>Avault - One Stop Cross Chain Yield Platform</title>
+    <title>Avault - One Stop OMNICHAIN Yield Platform</title>
     <meta name="description" content="Lower the threshold for users to use Web 3.0 DeFi Dapps!!!" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
     <meta name="theme-color" content="#030222" />
-    <meta name="twitter:title" content="Avault - One Stop Cross Chain Yield Platform" />
+    <meta name="twitter:title" content="Avault - One Stop OMNICHAIN Yield Platform" />
     <meta name="twitter:description" content="Lower the threshold for users to use Web 3.0 DeFi Dapps!!!" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
